# cmake_samples

./: .gitignore  README.md
cmake1/demo1/: CMakeLists.txt  README.md  main.cpp
cmake1/demo5/: CMakeLists.txt
